# DataSeed

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  demo_caching.py  pyproject.toml  test_celery_task.py  test_github_etag.py  test_refactored_celery.py  test_refactored_task.py
app/: config.py  database.py  main.py
app/api/: caching.py  deps.py  rate_limiter.py
app/api/v1/: health.py  items.py  sources.py
app/core/: __init__.py  health_checks.py  http_client.py  pagination.py  redis.py  registry.py
app/core/extractors/: __init__.py  base.py  github.py  hackernews.py
app/core/normalizers/: __init__.py  base.py  content.py  github.py
app/core/services/: ingestion.py
app/models/: __init__.py  ingestion.py  items.py  source.py
app/schemas/: __init__.py  common.py  items.py  source.py
app/workers/: celery_app.py  tasks.py
config/: sources.yaml
dashboard/: api.py  main.py  state.py  style.css  telemetry.py  ui.py
dashboard/components/: charts.py  filters.py  tables.py
dashboard/pages/: analytics.py  overview.py  sources.py
docker/: Dockerfile  docker-compose.yml
docs/: auto-refresh.md  dashboard_guide.md  mobile-responsiveness.md
migrations/: env.py
migrations/versions/: 1ed8951c4402_add_cursor_pagination_indexes_for_items_.py  8bfeb200e9f5_add_items_failed_and_error_notes_to_.py  d5e84b9df44d_add_indexes_to_ingestion_runs_table_for_.py  e2e0c4edd175_initial_migration_create_sources_items_.py
scripts/: __init__.py  migrate.py  run_github_pipeline.py  run_hn_pipeline.py  seed_sources.py  verify_sources.py
tests/: conftest.py
tests/api/v1/: __init__.py  test_items_endpoint.py
tests/integration/: test_github_ingestion.py  test_ingestion_persistence.py
tests/unit/: test_caching.py  test_github_extractor.py  test_github_normalizer.py  test_ingestion_service.py  test_rate_limiter.py
