[project]
name = "dataseed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Sebastian Peña", email = "jspenaq@unal.edu.co" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dataseed = "dataseed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
